[gd_scene load_steps=17 format=3 uid="uid://3u5c7svkslgb"]

[ext_resource type="Script" path="res://Monster/slimes/Slime.gd" id="1_fcuae"]
[ext_resource type="Texture2D" uid="uid://bc2qxqbt27edp" path="res://assets/Monster/Slimes/FreeSlime/FreeSlime/slime_idle.png" id="2_g4q5i"]
[ext_resource type="Texture2D" uid="uid://b4rc28xxak0rq" path="res://assets/Monster/Slimes/FreeSlime/FreeSlime/slime_run.png" id="3_y4m28"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5wkwx"]
atlas = ExtResource("2_g4q5i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6a1d"]
atlas = ExtResource("2_g4q5i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12jei"]
atlas = ExtResource("2_g4q5i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk7pw"]
atlas = ExtResource("2_g4q5i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp2gq"]
atlas = ExtResource("3_y4m28")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxy4i"]
atlas = ExtResource("3_y4m28")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xm2u"]
atlas = ExtResource("3_y4m28")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxfka"]
atlas = ExtResource("3_y4m28")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_guk36"]
atlas = ExtResource("3_y4m28")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8u2y"]
atlas = ExtResource("3_y4m28")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ejvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wkwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6a1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12jei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk7pw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp2gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxy4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xm2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxfka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guk36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8u2y")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_whkvf"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_prqqu"]
radius = 12.0

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_fcuae")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3ejvv")
animation = &"idle"
frame_progress = 0.109565

[node name="envCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_whkvf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="playerCollider" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_prqqu")

[node name="checkRight" type="RayCast2D" parent="."]
target_position = Vector2(11, 0)

[node name="checkLeft" type="RayCast2D" parent="."]
target_position = Vector2(-11, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
